--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -70,7 +70,22 @@
 		</form>
 	</section>
 </main>
-
+<section class="modal-overlay">
+	<div class="modal">
+		<div class="close">
+			<i class="fa-solid fa-xmark"></i>
+		</div>
+		<h2  class="modal-title">Galerie photo</h2>
+		<div class="modal-galerie">
+		<figure class="modal-work">
+			<div class="delete">
+			<i class="fa-solid fa-trash-can"></i>
+			</div>
+			<img class="work-img" src="assets/images/villa-ferneze.png" alt="">
+		</figure>
+		</div>
+	</div>
+</section>
 <footer>
 	<nav>
 		<ul>
