logout + ouverture fermeture modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,17 +20,19 @@
 </head>
 <body>
 	<section class="edition-box" id="edition-box">
+		<div class="open">
 		<i class="fa-regular fa-pen-to-square edition"></i>
 		<p class="edition">Mode édition</p>
+		</div>
 	</section>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<li class="projet">projets</li>
 			<li>contact</li>
 			<a href="/login.html">
-			<li>login</li>
+			<li id="logout">login</li>
 			</a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
@@ -49,7 +51,13 @@
 		</article>
 	</section>
 	<section id="portfolio">
+		<div class="project-conteneur">
 		<h2>Mes Projets</h2>
+		<div class="project-conteneur-login">
+		<i class="fa-regular fa-pen-to-square "></i>
+		<p>modifier</p>
+		</div>
+		</div>
 		<div class="button-project-box">
 		<button class="button-project" id="0">Tous</button>
 		</div>
