--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,12 +85,7 @@
 		</div>
 		<h2  class="modal-title">Galerie photo</h2>
 		<div class="modal-galerie">
-		<figure class="modal-work">
-			<div class="delete">
-			<i class="fa-solid fa-trash-can"></i>
-			</div>
-			<img class="work-img" src="assets/images/villa-ferneze.png" alt="">
-		</figure>
+
 		</div>
 		<button class="button-modal">Ajouter une photo</button>
 	</div>
@@ -103,9 +98,9 @@
 		<form>
 			<div class="modal-add-file">
 				<span><i class="fa-regular fa-image"></i></span>
-				<label class="modal-add-label" for="file">+ Ajouter photo</label>
-				<input type="file" class="modal-add-input" name="imageUrl">
-				<img src="#" class="modal-add-image" alt="Aperçut de l'image">
+				<label for="file">+ Ajouter photo</label>
+				<input type="file" id="file" name="imageUrl">
+				<img src="#" alt="Aperçut de l'image">
 				<p>jpg,png: 4mo max</p>
 			  </div>
 			<div class="modal-add-title-box">
