--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,8 +85,8 @@
 		</div>
 		<h2  class="modal-title">Galerie photo</h2>
 		<div class="modal-galerie">
-
 		</div>
+		<div class="separator"></div>
 		<button class="button-modal">Ajouter une photo</button>
 	</div>
 	<div class="modal-add">
@@ -105,13 +105,14 @@
 			  </div>
 			<div class="modal-add-title-box">
 			<label for="title">Titre</label>
-			<input type="text" class="modal-add-title" name="title">
+			<input type="text" class="modal-add-title" id="title" name="title">
 			</div>
 			<div class="modal-add-category-box">
 			<label for="category">Catégorie</label>
-			<select name="categoryId" class="modal-add-category"></select>
+			<select name="categoryId" class="modal-add-category" id="category"></select>
 			</div>
-			<button class="modal-add-button" disabled>Valider</button>
+			<div class="separator"></div>
+			<button class="modal-add-button">Valider</button>
 		</form>
 
 	</div>
